php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #50174 Incorrectly matched docComment
Submitted: 2009-11-14 05:18 UTC Modified: 2009-11-14 19:17 UTC
From: david at grudl dot com Assigned: felipe (profile)
Status: Closed Package: Reflection related
PHP Version: 5.2, 5.3, 6 OS:
Private report: No CVE-ID: None
 [2009-11-14 05:18 UTC] david at grudl dot com
Description:
------------
ReflectionMethod and ReflectionProperty may return invalid phpDocComment. See examples:


Reproduce code:
---------------
1) 

class TestClass
{
	/** const comment */
	const C = 0;

	function x() {}
}

$rm = new ReflectionMethod('TestClass', 'x');
echo $rm->getDocComment();


// OR


2)

class TestClass
{
	/** const comment */
	const C = 0;

	var $x;
}

$rp = new ReflectionProperty('TestClass', 'x');
echo $rp->getDocComment();



Expected result:
----------------
FALSE

Actual result:
--------------
/** const comment */

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2009-11-14 19:17 UTC] svn@php.net
Automatic comment from SVN on behalf of felipe
Revision: http://svn.php.net/viewvc/?view=revision&revision=290752
Log: - Fixed bug #50174 (Incorrectly matched docComment)
 [2009-11-14 19:17 UTC] felipe@php.net
This bug has been fixed in SVN.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sat Sep 26 18:00:02 2026 UTC