- Fixed bug #50174 (Incorrectly matched docComment)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@290752 c90b9560-bf6c-de11-be94-00142212c4b1